# SQL-Chat-Agent-for-Open-Census-Data

./: .gitattributes  .gitignore  CLAUDE.md  README.md  makefile  roadmap.md
Dataset/: testcase.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  settings.py  utils.py
backend/app/agent/: guardrails.py  prompts.py  runner.py  tools.py
backend/app/api/: auth.py  chat.py
backend/app/models/: auth.py  chat.py
backend/app/services/: anthropic_client.py  auth.py  chromadb_client.py  embedding_client.py  firestore_client.py  snowflake_client.py
backend/app/utils/: index_metadata.py  run_validation.py
backend/docs/tool_knowledge/: execute_sql.md  get_field_descriptions.md  search_feature_schema.md  search_fips_codes.md
dataset_description/: US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2019_CBG_GEOMETRY".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2019_CBG_GEOMETRY_WKT".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2019_CBG_PATTERNS".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2019_METADATA_CBG_FIELD_DESCRIPTIONS".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2019_METADATA_CBG_FIPS_CODES".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2019_METADATA_CBG_GEOGRAPHIC_DATA".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2020_CBG_GEOMETRY_WKT".md  US_OPEN_CENSUS_DATA__NEIGHBORHOOD_INSIGHTS__FREE_DATASET.PUBLIC."2020_METADATA_CBG_FIELD_DESCRIPTIONS".md  (+4 more)
docs/: agent_design.md  (+5 more)
(+30 files in other folders)
